Updating Flask code to remove need for templates sub-dir.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Video Streaming Demonstration</title>
+    <title>OpenCV stream</title>
   </head>
   <body>
     <h1>Video Streaming Demonstration</h1>
