--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>OpenCV stream</title>
+    <title>autoface</title>
   </head>
   <body>
-    <h1>Video Streaming Demonstration</h1>
+    <h1>OpenCV Dev Stream</h1>
     <img src="{{ url_for('video_feed') }}">
   </body>
 </html>
