--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>OpenCV Dev Stream</h1>
     <img src="{{ url_for('video_feed') }}">
+    <img src="{{ url_for('video_feed2') }}">
   </body>
 </html>
