Final edits to branch.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>autoface</title>
   </head>
   <body>
-    <h1>OpenCV Dev Stream</h1>
+    <h1>Haar Cascade Recognition</h1>
     <img src="{{ url_for('video_feed') }}">
   </body>
 </html>
